# Momentum

./: .replit  README.md  pyproject.toml  replit.md
backend/: db.sqlite3  requirements.txt
backend/api/: admin.py  llm_service.py  models.py  serializers.py  urls.py  views.py
backend/api/migrations/: 0001_initial.py
backend/momentum_backend/: asgi.py  settings.py  urls.py  wsgi.py
frontend/: App.js  package-lock.json  package.json
frontend/src/api/: client.js
frontend/src/screens/: DashboardScreen.js  OnboardingScreen.js
frontend/src/store/: useStore.js
